# DImage

./: .gitignore  CMakeLists.txt  README.md
src/app/: main.cpp  openCVOperations.cpp  openCVOperations.h
src/gui/: aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  abstractoperationwidget.cpp  abstractoperationwidget.h  edgedetectionwidget.cpp  edgedetectionwidget.h  edgedetectionwidget.ui  imagecontainer.cpp  imagecontainer.h  imagerotationwidget.cpp  imagerotationwidget.h  imagerotationwidget.ui  imageviewer.cpp  imageviewer.h  informationaboutimage.cpp  informationaboutimage.h  informationaboutimage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionwidget.cpp  optionwidget.h  optionwidget.ui
src/icons/: icons.qrc
src/util/: dimageutility.h
